<resources>
    <string name="app_name">GesMobApp</string>
    <string name="title_activity_main">GesMobApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GesMobApp</string>
    <string name="nav_header_subtitle">by Valentelmadafaka</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profesor">Perfil Profesor</string>
    <string name="menu_empresa">Perfil Empresa</string>
    <string name="menu_alumno">Perfil Alumno</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_calendario">Calendario</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
